Fixes leading practices selector alignment

--- a/components/common/select/select-styles.scss
+++ b/components/common/select/select-styles.scss
@@ -137,6 +137,8 @@
       background: $color-7;
       box-shadow: 0 4px 16px 0 rgba($color-1 ,.1);
 
+      text-align: left;
+
       &.tethered {
         min-width: 300px;
       }
@@ -248,139 +250,6 @@
       vertical-align: center;
     }
   }
-
-  // .react-selectize {
-  //   &.default {
-  //     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  //     &.root-node {
-  //       .react-selectize-control {
-  //         background-color: #fff;
-  //         border: 1px solid;
-  //         border-color: #d9d9d9 #ccc #b3b3b3;
-  //         border-radius: 4px;
-  //         font-size: 1em;
-  //         .react-selectize-placeholder {
-  //           color: #aaa;
-  //           text-indent: 8px;
-  //         }
-  //         .react-selectize-search-field-and-selected-values {
-  //           padding-left: 5px;
-  //         }
-  //       }
-  //       &.open {
-  //         &.flipped .react-selectize-control {
-  //           border-bottom-left-radius: 4px;
-  //           border-bottom-right-radius: 4px;
-  //           border-top-left-radius: 0px;
-  //           border-top-right-radius: 0px;
-  //         }
-  //         &:not(.flipped) .react-selectize-control {
-  //           border-bottom-left-radius: 0px;
-  //           border-bottom-right-radius: 0px;
-  //           border-top-left-radius: 4px;
-  //           border-top-right-radius: 4px;
-  //         }
-  //       }
-  //     }
-  //   }
-  //   &.dropdown-menu-wrapper.default {
-  //     overflow: hidden;
-  //     .dropdown-menu {
-  //       &.custom-enter-active, &.custom-leave-active {
-  //         transition: transform 0.2s 0s ease;
-  //       }
-  //       &.flipped {
-  //         &.custom-enter {
-  //           transform: translateY(100%);
-  //         }
-  //         &.custom-enter-active, &.custom-leave {
-  //           transform: translateY(0%);
-  //         }
-  //         &.custom-leave-active {
-  //           transform: translateY(100%);
-  //         }
-  //       }
-  //       &:not(.flipped) {
-  //         &.custom-enter {
-  //           transform: translateY(-100%);
-  //         }
-  //         &.custom-enter-active, &.custom-leave {
-  //           transform: translateY(0%);
-  //         }
-  //         &.custom-leave-active {
-  //           transform: translateY(-100%);
-  //         }
-  //       }
-  //     }
-  //   }
-  //   &.dropdown-menu.default {
-  //     background: #fff;
-  //     border: 1px solid #ccc;
-  //     margin-top: -1px;
-  //     &.flipped {
-  //       border-top-left-radius: 4px;
-  //       border-top-right-radius: 4px;
-  //     }
-  //     &:not(.flipped) {
-  //       border-color: #b3b3b3 #ccc #d9d9d9;
-  //       border-bottom-left-radius: 4px;
-  //       border-bottom-right-radius: 4px;
-  //     }
-  //     .no-results-found {
-  //       color: #aaa !important;
-  //       font-style: oblique;
-  //       padding: 8px 10px;
-  //     }
-  //     .simple-group-title {
-  //       background-color: #fafafa;
-  //       padding: 8px 8px;
-  //     }
-  //     .option-wrapper {
-  //       &.highlight {
-          // margin: 0;
-          // background: #f2f9fc;
-          // font-size: $font-size-regular;
-          // font-weight: $font-weight-regular;
-          // line-height: inherit;
-          // color: $color-8;
-  //       }
-  //       .simple-option {
-  //         color: #666;
-  //         cursor: pointer;
-  //         padding: 8px 10px;
-
-  //         > span {
-  //           font-size: $font-size-regular;
-  //         }
-
-  //         &.not-selectable {
-  //           background-color: #f8f8f8;
-  //           color: #999;
-  //           cursor: default;
-  //           font-style: oblique;
-  //           text-shadow: 0px 1px 0px #fff;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
-
-  // .multi-select.react-selectize.default.root-node .simple-value {
-  //   background: #f2f9fc;
-  //   border: 1px solid #c9e6f2;
-  //   border-radius: 2px;
-  //   color: #08c;
-  // }
-
-  // .simple-select.react-selectize.default.root-node {
-  //   &.open .react-selectize-control {
-  //     background-color: #fff;
-  //   }
-  //   &:not(.open) .react-selectize-control {
-  //     background-color: #f9f9f9;
-  //     background-image: linear-gradient(to bottom, #fefefe, #f2f2f2);
-  //   }
-  // }
 
   & + .c-select {
     margin: 0 0 0 35px;
